# Code-Pulse

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: mock-updater.js  release.js
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5  test_regex.rs
src-tauri/src/: analyzer.rs  api_server.rs  cache.rs  lib.rs  minimizer.rs
src-tauri/src/analyzer/: constants.rs  deps.rs  mod.rs  regex.rs  resolve.rs
src-tauri/src/api_server/: handlers.rs
src/assets/: tailwind.css
src/components/: AppSettingsModal.vue  DependencyTreeSidebar.vue  DynamicControl.vue  FileTree.vue  FileTreeNode.vue  SettingsModal.vue
src/components/common/: CommandExecutorModal.vue  ConfirmDialog.vue  SettingsModal.vue
src/components/common/SettingsModal/: DynamicControl.vue  SettingsModal.vue  types.ts
src/components/file-tree/: DependencyTreeSidebar.vue
src/components/layout/: AppLayoutGenerateControl.vue  AppLayoutHeader.vue  AppLayoutInputSection.vue  AppLayoutResultsSection.vue  AppLayoutVersionInfo.vue  LayoutHeader.vue  LayoutResultsSection.vue  LayoutVersionInfo.vue
src/components/settings/: AppSettingsModal.vue
src/composables/: useContextGeneration.ts
src/config/: appSettings.ts
src/services/apiServer/: router.ts  types.ts
src/services/apiServer/core/: code.service.ts  contextFormatter.ts
src/services/apiServer/handlers/: code.handler.ts  common.handler.ts  index.ts
src/services/apiServer/schemas/: code.schema.ts  (+1 more)
src/utils/: index.ts
src/workers/: context.worker.ts
