[package]
name = "codepulse"
version = "2.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codepulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.3"
walkdir = "2.5.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rustpython-parser = "0.4.0"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "36.0.0"
swc_ecma_visit = "21.0.0"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
dashmap = "6.1.0"
uuid = { version = "1.22.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
